noinst_HEADERS = \
	bmon/attr.h \
	bmon/bmon.h \
	bmon/compile-fixes.h \
	bmon/conf.h \
	bmon/config.h \
	bmon/defs.h \
	bmon/element_cfg.h \
	bmon/element.h \
	bmon/graph.h \
	bmon/group.h \
	bmon/history.h \
	bmon/info.h \
	bmon/input.h \
	bmon/list.h \
	bmon/module.h \
	bmon/output.h \
	bmon/unit.h \
	bmon/layout.h \
	bmon/utils.h
